--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
 		<div id="deviceready" class="blink"></div>
 		<br/><button id="addbutton"><a href="#" class="topcoat-button" id="scan">Add</a></button>&nbsp&nbsp
 		<button id="pay" onClick = "splitter(1,'nimish,123,123,123,123,1')"/>Pay</button>&nbsp&nbsp
-		<button id="exit" onClick = "window.close()"/>Exit</button><br/>
+		<button id="exit" onClick = "navigator.app.exitApp()"/>Exit</button><br/>
 		<h3><em id="total_cost"></em><em id="total_items"></em></h3>
 		
 	</div>
